--- a/intranet/htdocs/intranet-tmpl/admin/permisos/permisos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/permisos/permisos.tmpl
@@ -3,7 +3,10 @@
 <script>
     $(document).ready(function() {
     	$("#usuario").focus();
-    }
+    	CrearAutocompleteUsuarios({ IdInput: 'usuario', 
+                                    IdInputHidden: 'nro_socio_hidden', 
+                                 });
+    });
 </script>
 
 <div class="titulos" >[% "Administraci&oacute;n de permisos" | i18n %]</div>
