--- a/intranet/htdocs/intranet-tmpl/catalogacion/configuracion/barcode_gen_setup.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/configuracion/barcode_gen_setup.tmpl
@@ -66,7 +66,7 @@
 <div class="titulos" >[% 'Configuraci&oacute;n de formatos de Barcode' | i18n %]</div>
 
 <fieldset>
-    <legend><strong>[% "Seleccione el tipo de documento a configurar:" | i18n %]</strong></legend>
+    <legend>[% "Seleccione el tipo de documento a configurar:" | i18n %]</legend>
 
     [% PERL %]
             print C4::AR::Filtros::to_Icon(   
