--- a/intranet/htdocs/intranet-tmpl/catalogacion/tablasReferencia/detalle_tabla.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/tablasReferencia/detalle_tabla.tmpl
@@ -30,7 +30,7 @@ function updateCambiarVisualizacion(){
 }
 </script>
 <div class="datos_tabla_div" id="datos_tabla_div">
-    <table id="tablaResult" class="datos_tabla" border=0 cellspacing=0 cellpadding=0>
+    <table id="tablaResult" class="table table-striped">
         <thead>
             <tr class="titulo_tabla_resultado">
                 <th>[% "Campo" | i18n %]</th>
