--- a/intranet/htdocs/intranet-tmpl/catalogacion/tablasReferencia/tablasReferencia.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/tablasReferencia/tablasReferencia.tmpl
@@ -20,36 +20,33 @@ function updateObtenerTabla(responseText){
 
 </script>
 
-<script type="text/javascript">
-
-</script>
-
 <div class="permisos">
-    <br><br>
-    <fieldset>
-        <legend class="titulo_legend">[% "Selecci&oacute;n de tablas de referencia" | i18n %]</legend>
-        <div class="permisos_selector">
-            <ul>
-                <li class="sub_item">
-                    <label for="id_ui"> Tabla.: </label>
-                    [% combo_tablas %]
-                </li>
-                [% PERL %]
-                    print C4::AR::Filtros::to_Button(   text    => "[% 'Obtener Tabla' | i18n %]",
-                                                        boton   => "boton_agregar",
-                                                        onClick => "obtenerTabla();",
-                                                        title   => "[% 'Obtener Tabla' | i18n %]",
-                                                        alternClass => "botonCentrado",
-                            ) ;
-                [% END %]
-            </ul>
-        </div>
-        <br>
-        <br>
-        <br>
-    </fieldset>
+    <form class="form-horizontal">
+        <fieldset>
+            <legend class="titulo_legend">[% "Selecci&oacute;n de tablas de referencia" | i18n %]</legend>
+            <div class="permisos_selector">
+                <div class="control-group">
+                    <label class="control-label" for="id_ui"> [% "Tabla" | i18n %]: </label>
+                    <div class="controls">
+                        [% combo_tablas %]
+                    </div>
+                </div>
+                
+                <div class="form-actions">
+
+                    [% PERL %]
+                        print C4::AR::Filtros::to_Button(   text    => "[% 'Obtener Tabla' | i18n %]",
+                                                            boton   => "btn btn-large btn-primary",
+                                                            onClick => "obtenerTabla();",
+                                                            title   => "[% 'Obtener Tabla' | i18n %]",
+                                                            alternClass => "botonCentrado",
+                                ) ;
+                    [% END %]
+                </div>
+            </div>
+        </fieldset>
+    </form>
     <div class="detalle_tabla" id="detalle_tabla"> </div>
 </div>
-
 
 [% INCLUDE "intranet-bottom.inc" %]
