--- a/intranet/htdocs/intranet-tmpl/z3950/z3950Result.tmpl
+++ b/intranet/htdocs/intranet-tmpl/z3950/z3950Result.tmpl
@@ -6,7 +6,7 @@
     </li>
 [% ELSE %]
     <div class="tablaResultado_preferencias" id="tablaResultado_preferencias" >
-        <table name="tablaResult" class="datos_tabla" cellspacing="0" cellpadding="0" border="0" width="100%">
+        <table name="tablaResult" class="table table-striped">
             <thead>
                 <tr class="titulo_tabla_resultado">
                     <th>[% "Servidor" | i18n %]</th>
@@ -52,16 +52,18 @@
         [% END %]
         </tbody>
         </table>
+        <div class="form-actions">
         [% PERL %]
 	                print C4::AR::Filtros::to_Button(   
 	                                    text    => "[% 'Agregar Servidor' | i18n %]",
-	                                    boton   => "boton_agregar",
+	                                    boton   => "btn btn-large btn-primary",
 	                                    onClick => "addServer();",
 	                                    width => "auto",
 	                                    title   => "[% 'Agregar Servidor' | i18n %]",
 	                                    alternClass   => "botonCentrado"    
 	                        ) ;
 	    [% END %]
+	    </div>
     </div>
 [% END %]
 </fieldset>
